<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) Stichting Akvo (Akvo Foundation)
  ~
  ~ This file is part of Akvo Caddisfly.
  ~
  ~ Akvo Caddisfly is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Akvo Caddisfly is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Akvo Caddisfly. If not, see <http://www.gnu.org/licenses/>.
  -->

<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="takePhoto">Take Photo</string>
    <string name="retakePhoto">Retake Photo</string>
    <string name="take_photo_of_result">Take a photo of the result</string>
    <string name="take_photo_meter_result">Take a photo of the measured result on the device</string>
    <string name="enter_measured_value">Enter the measured value</string>

    <string name="sd_on">Press briefly (*sd_on_off*) to turn device on.</string>
    <string name="sd_fill_photo_fill_in">Take a photo of the screen with the measurement and fill in the measurement value.</string>
    <string name="sd_turn_off">Press and hold (*sd_on_off*) (3 sec.) to turn the instrument off.</string>
    <string name="sd_rinse">Rinse the sensor with distilled water (never touch the electrode with anything) and place the protective cap back. Make sure the protective cap is filled with KCL solution.</string>
    <string name="fill_turbidity_tube">Connect the turbidity tubes and fill the tube with the water sample until you cannot see the black circle at the yellow bottom anymore.</string>
    <string name="empty_tube_see_black_circle">Empty the tube with small intervals until you can see the black circle at the yellow bottom again.</string>
    <string name="read_turbidity_on_side_tube">Read out the turbidity on the side of the tube.</string>

    <string name="fill_in_value_turbidity_tube">Fill in the obtained turbidity value in the app.</string>
    <string name="clean_turbidity_tube">Empty the tube completely, clean if necessary, disconnect tubes and store them.</string>
    <string name="sd_70_rinse">Rinse the sensor with distilled water (never touch the electrode with anything) and place the protective cap back.</string>

    <!--pH Cl Manual Swatch Select Tester-->
    <string name="pt_open_lid">Open the lid of the tester.</string>
    <string name="pt_fill_compartments_1">Rinse the compartments with the water sample.</string>
    <string name="pt_fill_compartments_2">Fill the three compartments until the edge with the water sample. Avoid touching the water sample or the inside of the tester.</string>
    <string name="pt_read_result">Compare the sample colour with the intervals for pH and free chlorine to find the best match.</string>
    <string name="pt_select_result">Select the colour intervals that best match your sample.</string>
    <string name="pt_select_result_next">In the next screen, tap both colour intervals that best match your sample as shown in the example below.</string>
    <string name="pt_clean_compartments">Clean the compartments with distilled water.</string>
    <string name="pt_add_reagent_1">Add the Phenol Red tablet reagent directly from the foil into the left compartment (pH Phenol Red). Avoid touching the reagent tablets.</string>
    <string name="pt_add_reagent_2">Add the DPD No.1 tablet directly from the foil into the right (Cl DPD) compartment. Avoid touching the reagent tablets.</string>
    <string name="pt_close_shake">Close the box with the lid and shake until the reagents are dissolved. Be sure to place the lid correctly with the arrow facing you.</string>
    <string name="select_color_intervals">Select colour intervals</string>
    <string name="color_intervals">Color intervals</string>
    <string name="select_colors_before_continue">Select the colour intervals before continuing</string>

    <string name="checkit_comparator_uses">The Checkit Comparator uses two cells and a coloured disc.</string>
    <string name="insert_colored_disk">Insert the coloured disc in the comparator.</string>
    <string name="add_one_tablet_to_other_cell">Add one %reagent1 tablet to the other cell, and close it with a lid. Swirl the cell until the reagent is completely dissolved</string>
    <string name="add_one_powder_to_other_cell">Add one %reagent1 powder pack to the other cell, and close it with a lid. Swirl the cell until the reagent is completely dissolved</string>
    <string name="match_colors_by_rotating">By rotating the disc, match the two colours against daylight, looking AWAY from the sun.</string>
    <string name="rinse_vial_sample">Rinse the vial with the water sample.</string>

    <!--Nitrate Checkit-->
    <string name="fill_nitrate_tube">Fill the Nitrate Test Tube to the 20 ml mark.</string>
    <string name="add_one_level_spoon">Add one level spoon full %reagent1 Powder and a %reagent2 Tablet to the Test Tube. <b>Don\'t crush the tablet!</b></string>
    <string name="close_with_lid_shake">Close it with a lid and shake for <b>1 minute</b>.</string>
    <string name="allow_minute_flocculation">Allow <b>1 minute</b> for the flocculation of the NITRATE-Test Powder.</string>
    <string name="invert_test_tube">Invert the Test Tube two or three times to complete the flocculation.</string>
    <string name="allow_time_complete_sediment">Allow <b>2 minutes</b> time for complete sediment of NITRATE-Test Powder.</string>
    <string name="fill_clear_solution">Fill one cell to the 10 ml mark with the clear solution of the Test Tube.</string>

    <!--Fluoride Checkit-->
    <string name="fill_one_cell_other_deionized">Fill one cell to the 10 ml mark. Fill the other cell with deionized water to the 10ml mark.</string>
    <string name="pipet_reagent_close_cells">Pipet 2 ml %reagent1 Reagent Solution to each cell. Close the cells with lids and swirl gently.</string>


    <string name="add_tablet1_crush">Add one %reagent1 tablet to the other cell and crush the tablet.</string>
    <string name="add_tablet2_dissolve">Afterwards add one %reagent2 tablet, crush the tablet and close it with a lid. Swirl the cell until the reagent is completely dissolved.</string>
    <string name="take_right_cell">take the cell from the right-hand compartment of the comparator and remover the lid.</string>
    <string name="add_tablet2_swirl">Add one %reagent2 tablet to the cell in the right-hand space of the comparator, close it with a lid. Swirl the cell until reagent is completely dissolved.</string>
    <string name="edta_complex_zinc_1">In the case of high levels of zinc:</string>
    <string name="edta_complex_zinc_2">Add one EDTA tablet to the already coloured water sample.</string>
    <string name="edta_complex_zinc_3">Crush and mix to dissolve the tablet. Then continue with the next step of the instructions.</string>
    <string name="add_reagent1_swirl_gently">Add one %reagent1 in each cell. Close cells with a lid and swirl gently.</string>
    <string name="add_reagent2_swirl_gently">Add 15 drops of %reagent2 to each cell. Close cells with a lid and swirl gently.</string>
    <string name="add_reagent3_swirl_gently">Add 21 drops of %reagent3 to each cell. Close cells with a lid and swirl gently.</string>
    <string name="remove_lids_place_sample_cell">Remove the lids. Place the cell with the sample facing the mark (point) in the right-hand compartment of the comparator.</string>
    <string name="place_reference_cell">Place the reference cell facing the mark (point) in the left-hand compartment of the comparator.</string>
    <string name="match_colors_by_rotating_angle">Hold the comparator at an angle so that enough north daylight goes through the cell. The mirror unit makes use of the view through the entire length of the cell.</string>
    <string name="rinse_cells">It is essential to rinse the cells thoroughly after each test.</string>
    <string name="store_dark">Store CHECKIT® Disc in the dark.</string>
    <string name="round_off_test">Round off test</string>
    <string name="ph_coloration"><b>Note</b>: pH values below 4 produce always a red colouration. pH values above 10 produce always a purple colouration.</string>
    <string name="fill_one_cell">Fill one cell to the 10 ml mark  with the water sample.</string>
    <string name="fill_both_cells">Fill both cells to the 10 ml mark with the water sample.</string>
    <string name="fill_other_cell_deionized">Fill the other cell with deionized water to the 10ml mark.</string>
    <string name="close_the_cell">Close the cell with a lid and place it facing the mark (point) in the left-hand space of the comparator. It acts as a blank.</string>
    <string name="close_one_cell">Close one cell with a lid and place it facing the mark (point) in the left-hand space of the comparator. It acts as a blank.</string>
    <string name="place_sample_left_space">Place the cell with the water sample facing the mark (point) in the left-hand space of the comparator.</string>
    <string name="place_deionized_right_space">Place the cell with the deionized water facing the mark (point) in the right-hand space of the comparator.</string>
    <string name="place_cell_right_space">Place this cell facing the mark (point) in the right-hand space of the comparator.</string>
    <string name="place_second_cell">Place the second cell facing the mark (point) in the right-hand space of the comparator.</string>
    <string name="sd_50_dip_sample_1">Remove protective cap, rinse the electrode with distilled water.</string>
    <string name="sd_50_dip_sample_2">Immerse the instrument into the sample so that the instrument is submersed to the sealing ring level. Stir the sensor gently while it is in the sample.</string>
    <string name="sd_50_dip_sample_3">Press briefly (*sd_on_off*) to freeze / unfreeze the measurement.</string>
    <string name="sd_maintenance"><b>Note</b>: Regularly check the calibration of the device and recalibrate if necessary. For calibration instructions: see the product manual in the box.</string>
    <string name="sd_70_dip_sample_1">Remove protective cap, rinse the sensor with the water sample.</string>
    <string name="sd_70_dip_sample_2">Immerse the instrument into the sample so that the instrument is submersed to the sealing ring level. Press briefly (*sd_on_off*) to freeze / unfreeze the measurement.</string>
    <string name="wait_for_color_reaction">Wait <b>%reactionTime1</b> for complete colour reaction.</string>
    <string name="wait_for_color_reaction_2">Wait <b>%reactionTime2</b> for complete colour reaction.</string>
    <string name="wait_for_color_reaction_3">Wait <b>%reactionTime3</b> for complete colour reaction.</string>
    <string name="add_tablet_crush_swirl">Add one %reagent1 tablet in the other cell. Crush the tablet and close it with a lid. Swirl the cell until reagent is completely dissolved.</string>
    <string name="add_tablet_crush_stir">Add one %reagent3 Tablet to this cell, crush it and mix it with a clean stirring rod. Close it with the lid.</string>
    <string name="edta_complex_copper_1">In the case of high levels of copper:</string>
    <string name="edta_complex_copper_2">First measure the result (A). Then add one EDTA tablet to the already coloured water sample.</string>
    <string name="edta_complex_copper_3">Crush and mix to dissolve the tablet. Read the second result (B). The concentration Zinc is the first result (A) minus the second result (B).</string>
    <string name="prepare_do">"Make sure that:\n - 4 AA batteries are inserted in the battery compartment\n - The SD card is inserted in the device\n - The oxygen sensor is recently calibrated (see manual for calibration)"</string>
    <string name="connect_do_sensor">Connect the sensor connecting plug to the jack on the measuring device and tighten it clockwise.</string>
    <string name="turn_on_do">Turn the device on.</string>
    <string name="immers_do_sensor">Immerse the sensor in the water sample. Make sure that the temperature sensor is fully immersed. Wait until the result is stable to ensure the dissolved oxygen is fully diffused.</string>
    <string name="disconnect_do_sensor">In order to remove the sensor from the device, the connecting plug is unscrewed anticlockwise and the plug is pulled out of the jack.</string>
    <string name="safe_storage_do">Be careful with the sensor since it is sensitive. The sensor must always be kept moist. For this purpose, the storage flask included in the scope of supply is fitted on the sensor and screwed tight.</string>
    <string name="enter_measured_value_do">In the next screen, enter the measured value from the display (the red square shows the location where the result will be displayed).</string>
    <string name="take_photo_of_result_do">Take a photo of the result on the display.</string>

</resources>