...
    <string name="survey">Survey</string>
    <string name="success" tools:ignore="UnusedResources">Success</string>
    <string name="done" tools:ignore="UnusedResources">Done</string>
    <string name="close">Close</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="navigate_up">Navigate up</string>
    <string name="logo">Logo</string>

    <string name="result">Result</string>
    <string name="language">Language</string>
    <string name="notSupported">Not Supported</string>

    <string name="stage_one"><b>Stage 1:</b></string>
    <string name="stage_two"><b>Stage 2:</b></string>
    <string name="us_cm">μS/cm</string>
    <string name="ms_cm">ms/cm</string>

    <string name="select_unit">Select unit</string>
    <string name="submitResult">Submit Result</string>
    <string name="warning">Warning</string>
    <string name="notFound">Not Found</string>

...
